worked on modern german semantics and basic idea

--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -32,7 +32,7 @@ The left column shows the internal case between square brackets. The top row sho
 The top-left to bottom-right diagonal corresponds to the examples in which the internal and external case match. The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition.
 All these instances are grammatical.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Internal and external case allowed}
   \begin{tabular}{c|c|c|c}
@@ -70,7 +70,8 @@ The three cells in the bottom-left corner, marked in light gray, are the situati
 Just as in the unrestricted type, these six instances are grammatical.
 The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition. These instances are not grammatical for this type of language. The reasoning behind that is that the language does not allow the external case to surface when it wins the case competition.
 
-\begin{table}[H]
+
+\begin{table}[ht]
   \center
   \caption{Only internal case allowed}
   \begin{tabular}{c|c|c|c}
@@ -107,7 +108,7 @@ The top-left to bottom-right diagonal corresponds to the examples in which the i
 The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. Unlike in the unrestricted type and the `unrestricted --- internal-only' type, these instances are not grammatical for this type of language. The reasoning behind that is that the language does not allow the internal case to surface when it wins the case competition.
 The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition. Just as in the unrestricted type but unlike in the `unrestricted --- internal-only' type, these instances are grammatical.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Only external case allowed}
   \begin{tabular}{c|c|c|c}
@@ -146,7 +147,7 @@ The three cells in the top-right corner, marked in dark gray, are the situations
 
 On the surface, this pattern cannot be distinguished from a pattern that does not have case competition and does not allow for any case mismatches. I understand `a language with case competition' as a language that compares the internal and external case in its headless relatives. If the internal and external case are not compared in this type of language, it would be unclear why the diagonal is different from all the other cells. The source of ungrammaticality for the cells in Table \ref{tbl:case-competition-none} can only come from the comparing the internal and external case and concluding that the internal case and the external case differ. The grammaticality of the diagonal follows from the conclusion that the internal and the external case match. In Section \ref{sec:without-case-competition} I discuss languages in which the internal and external case are not compared to each other.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Only matching allowed}
   \begin{tabular}{c|c|c|c}
@@ -182,7 +183,7 @@ In this chapter I show that three of these four patterns I introduced are attest
 
 This section discusses the situation in which the internal case and the external case are allowed to surface when either of them wins the case competition. I repeat the pattern from Section \ref{sec:possible-patterns} in Table \ref{tbl:case-competition-int-ext-repeated}.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Internal and external case allowed (repeated)}
   \begin{tabular}{c|c|c|c}
@@ -218,7 +219,7 @@ In Chapter \ref{ch:recurring}, I discussed case competition in Gothic headless r
 In Gothic, the relative pronoun is allowed to surface in the internal case and the external case. The top-left to bottom-right diagonal corresponds to the examples in which the internal and external case match. The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition.
  All these instances are grammatical. The examples corresponding to the cells in Table \ref{tbl:summary-gothic-repeated} can be found in Section \ref{sec:pattern-rels}.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Summary of Gothic headless relatives (repeated)}
     \input{tables/gothic-summary}
@@ -265,7 +266,7 @@ The relative pronoun \tit{them} `\ac{rel}.\ac{pl}.\ac{m}.\ac{dat}' appears in th
 
 These findings can be summarized as in Table \ref{tbl:summary-ohg-matching}. The top-left to bottom-right diagonal corresponds to the examples I have given so far in which the internal and external case match. The nominative marked in light gray corresponds to \ref{ex:ohg-nom-nom}, in which the internal nominative case competes against the external nominative case, and the relative pronoun surfaces in the nominative case. The accusative marked in dark gray corresponds to \ref{ex:ohg-acc-acc}, in which the internal accusative case competes against the external accusative case, and the relative pronoun surfaces in the accusative case. The unmarked dative corresponds to \ref{ex:os-dat-dat}, in which the internal dative case competes against the external dative case, and the relative pronoun surfaces in the dative case.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Old High German headless relatives (matching)}
   \begin{tabular}{c|c|c|c}
@@ -322,7 +323,7 @@ At the end of this section I discuss a counterexample to the case scale, in whic
 
 The two examples in which the nominative and the accusative compete are highlighted in Table \ref{tbl:summary-old-high-german-nom-acc}. The light gray marking corresponds to \ref{ex:ohg-nom-acc}, in which the internal accusative wins over the external nominative, and the relative pronoun surfaces in the accusative case. The dark gray marking corresponds to \ref{ex:ohg-acc-nom}, in which the external accusative wins over the internal nominative, and the relative pronoun surfaces in the accusative case.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Old High German headless relatives (\ac{nom} --- \ac{acc})}
   \begin{tabular}{c|c|c|c}
@@ -376,7 +377,7 @@ and 3\ac{sg}.\ac{m}.\ac{nom} reply.\ac{pst}.3\ac{sg}\scsub{[dat]} \ac{rel}.\ac{s
 
 The two examples in which the nominative and the dative compete are highlighted in Table \ref{tbl:summary-old-high-german-nom-dat}. The light gray marking corresponds to \ref{ex:ohg-nom-dat}, in which the internal dative wins over the external nominative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:ohg-dat-nom}, in which the external dative wins over the internal nominative, and the relative pronoun surfaces in the dative case.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Old High German headless relatives (\ac{nom} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
@@ -434,7 +435,7 @@ be.\ac{pres}.2\ac{sg} -2\ac{sg}.\ac{nom} now truly {great}.\ac{cmpr}\scsub{[dat]
 
 The two examples in which the accusative and the dative compete are highlighted in Table \ref{tbl:summary-old-high-german-acc-dat}. The light gray marking corresponds to \ref{ex:ohg-acc-dat}, in which the internal dative wins over the external accusative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:ohg-dat-acc}, in which the external dative wins over the internal accusative, and the relative pronoun surfaces in the dative case.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Old High German headless relatives (\ac{acc} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
@@ -487,7 +488,7 @@ Leaving the counterexample aside, I conclude that Gothic and Old High German are
 
 This section discusses the situation in which only the internal case is allowed to surface when it wins the case competition. When the internal case wins the case competition, the result is ungrammatical. I repeat the pattern from Section \ref{sec:possible-patterns} in Table \ref{tbl:case-competition-only-int-repeated}.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Only internal case allowed (repeated)}
   \begin{tabular}{c|c|c|c}
@@ -550,7 +551,7 @@ The relative pronoun \tit{wem} `\ac{rel}.\ac{an}.\ac{dat}' appears in the intern
 
 These findings can be summarized as in Table \ref{tbl:summary-mg-matching}. The top-left to bottom-right diagonal corresponds to the examples I have given so far in which the internal and external case match. The nominative marked in light gray corresponds to \ref{ex:mg-nom-nom}, in which the internal nominative case competes against the external nominative case, and the relative pronoun surfaces in the nominative case. The accusative marked in dark gray corresponds to \ref{ex:mg-acc-acc}, in which the internal accusative case competes against the external accusative case, and the relative pronoun surfaces in the accusative case. The unmarked dative corresponds to \ref{ex:mg-dat-dat}, in which the internal dative case competes against the external dative case, and the relative pronoun surfaces in the dative case.
 
-\begin{table}[H]
+\begin{table}[ht]
  \center
  \caption{Modern German headless relatives (matching)}
  \begin{tabular}{c|c|c|c}
@@ -633,7 +634,7 @@ The two examples in which the nominative and the accusative compete are highligh
 The light gray marking corresponds to \ref{ex:mg-nom-acc}, in which the internal accusative wins over the external nominative, and the relative pronoun surfaces in the accusative case (and not in the losing nominative case as in \ref{ex:mg-nom-acc-u}).
 The dark gray marking corresponds to \ref{ex:mg-acc-nom}, in which the external accusative wins over the internal nominative, but the relative pronoun is not allowed to surface in the accusative case (or in the losing nominative case as in \ref{ex:mg-acc-nom-u}).
 
- \begin{table}[H]
+ \begin{table}[ht]
    \center
    \caption{Modern German headless relatives (\ac{nom} --- \ac{acc})}
    \begin{tabular}{c|c|c|c}
@@ -703,7 +704,7 @@ The two examples in which the nominative and the dative compete are highlighted 
 The light gray marking corresponds to \ref{ex:mg-nom-dat}, in which the internal dative wins over the external nominative, and the relative pronoun surfaces in the dative case (and not in the losing nominative case as in \ref{ex:mg-nom-dat-u}).
 The dark gray marking corresponds to \ref{ex:mg-dat-nom}, in which the external dative wins over the internal nominative, but the relative pronoun is not allowed to surface in the dative case (or in the losing nominative case as in \ref{ex:mg-dat-nom-u}).
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Modern German headless relatives (\ac{nom} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
@@ -773,7 +774,7 @@ The two examples in which the nominative and the dative compete are highlighted 
 The light gray marking corresponds to \ref{ex:mg-acc-dat}, in which the internal dative wins over the external accusative, and the relative pronoun surfaces in the dative case (and not in the losing accusative case as in \ref{ex:mg-acc-dat-u}).
 The dark gray marking corresponds to \ref{ex:mg-dat-acc}, in which the external dative wins over the internal nominative, but the relative pronoun is not allowed to surface in the dative case (or in the losing accusative case as in \ref{ex:mg-dat-acc-u}).
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Modern German headless relatives (\ac{acc} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
@@ -810,7 +811,7 @@ In sum, Modern German is an instance of a language that only allows the internal
 
 This section discusses the situation in which only the external case is allowed to surface when it wins the case competition. When the internal case wins the case competition, the result is ungrammatical. I repeat the pattern from Section \ref{sec:possible-patterns} in Table \ref{tbl:case-competition-only-ext-repeated}.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Only external case allowed (repeated)}
   \begin{tabular}{c|c|c|c}
@@ -857,7 +858,7 @@ any parent.\ac{sg}.\ac{nom} food.\ac{sg}.\ac{acc} provide.\ac{pres}.3\ac{sg}\scs
 
 This example is compatible with the picture of Classical Greek only allowing the external case to surface when it wins the competition. I repeat Table \ref{tbl:case-competition-only-ext-repeated} from the beginning of this section as Table \ref{tbl:case-competition-ag-poss1}, and I mark the cell that corresponds to the example in \ref{ex:ag-dat-acc} in gray.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Classical Greek headless relatives possibility 1}
   \begin{tabular}{c|c|c|c}
@@ -889,7 +890,7 @@ This example is compatible with the picture of Classical Greek only allowing the
 
 However, the example in \ref{ex:ag-dat-acc} is not only compatible with the external-only type. Considering only the example I have given so far, it is still possible for Classical Classical Greek to be of the unrestricted type. I repeat Table \ref{tbl:case-competition-int-ext-repeated} from Section \ref{sec:pattern-i} as Table \ref{tbl:case-competition-ag-poss2}, and I mark the cell that corresponds to the example in \ref{ex:ag-dat-acc} in gray.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Classical Greek headless relatives possibility 2}
   \begin{tabular}{c|c|c|c}
@@ -936,7 +937,7 @@ The sentence in \ref{ex:ag-nom-acc} can also be analyzed as a headed relative, i
 
 This example shows that Classical Greek is not an instance of the third possible pattern, in which only the external case is allowed to surface. Instead, as illustrated by Table \ref{tbl:case-competition-classical-greek}, the language allows the internal case (marked light gray) and the external case (marked dark gray) to surface when either of them wins the case competition.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Summary of Classical Greek headless relatives}
   \begin{tabular}{c|c|c|c}
@@ -976,7 +977,7 @@ To sum up, to my knowledge, there is no language in which only the external case
 
 This section discusses the situation in which the case is neither the internal case nor the external case allowed to surface when either of them wins the competition. In other words, when the internal and the external case differ, there is no grammatical headless relative construction possible. Only when there is a tie, i.e. when the internal and external case match, there is a grammatical result. I repeat the pattern from Section \ref{sec:possible-patterns} in Table \ref{tbl:case-competition-none-repeated}.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{The matching type (repeated)}
   \begin{tabular}{c|c|c|c}
@@ -1029,7 +1030,7 @@ The relative pronoun \tit{them} `\ac{rel}.\ac{pl}.\ac{an}.\ac{dat}' appears in t
 
 These findings can be summarized as in Table \ref{tbl:summary-polish-matching}. The top-left to bottom-right diagonal corresponds to the examples I have given so far in which the internal and external case match. The accusative marked in light gray corresponds to \ref{ex:polish-acc-acc}, in which the internal accusative case competes against the external accusative case, and the relative pronoun surfaces in the accusative case. The dative marked in dark gray corresponds to \ref{ex:polish-dat-dat}, in which the internal dative case competes against the external dative case, and the relative pronoun surfaces in the dative case.
 
-\begin{table}[H]
+\begin{table}[ht]
  \center
  \caption{Polish headless relatives (matching)}
  \begin{tabular}{c|c|c}
@@ -1093,7 +1094,7 @@ The two examples in which the accusative and the dative compete are highlighted 
 The light gray marking corresponds to \ref{ex:polish-acc-dat}, in which the internal dative wins over the external accusative, but the relative pronoun is not allowed to surface in the dative case (or in the losing accusative case as in \ref{ex:polish-acc-dat-u}).
 The dark gray marking corresponds to \ref{ex:polish-dat-acc}, in which the external dative wins over the internal accusative, but the relative pronoun is not allowed to surface in the dative case (or in the losing accusative case as in \ref{ex:polish-dat-acc-u}).
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Polish headless relatives (\ac{acc} --- \ac{dat})}
   \begin{tabular}{c|c|c}
@@ -1125,7 +1126,7 @@ In case competition in headless relatives two aspects play a role. The first one
 
 This generates the pattern shown in Table \ref{tbl:case-competition-table}. The left column shows the internal case between square brackets. The top row shows the external case between square brackets. The other cells indicate the case of the relative pronoun. When the dative wins over the accusative, the relative pronoun appears in the dative case. When the dative wins over the nominative, the relative pronoun appears in the nominative case. When the accusative wins over the nominative, the relative pronoun appears in the accusative case.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Relative pronoun follows case competition}
   \begin{tabular}{c|c|c|c}
@@ -1172,7 +1173,7 @@ Modern German is an example of the `unrestricted --- internal-only' type in \ref
 To my knowledge, the `unrestricted --- external-only' type in \ref{ex:ext-only} is not attested. This would be a language in which relative pronouns in the unmarked and the dark gray cells are grammatical.
 Polish is an example of a language of the matching type in \ref{ex:matching}. In this language, relative pronoun in only in the unmarked cells are grammatical.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Relative pronoun follows case competition}
   \begin{tabular}{c|c|c|c}
@@ -1214,7 +1215,7 @@ If a language allows the internal and the external case to surface, the unrestri
 The matching type could also have been generated with the second parameter. The text along the arrow would have been \tit{none}. I choose to not do this, because in Chapter \ref{ch:relativization} I propose separate mechanisms for each of the parameters in Figure \ref{fig:attested-headless-relatives-case-competition}. The first one distinguishes matching languages from unrestricted (i.e. unrestricted and internal-only) languages, and the second one distinguishes unrestricted from internal-only languages.
 }
 
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \footnotesize{
   \begin{tikzpicture}[node distance=1.5cm]
@@ -1257,7 +1258,7 @@ In languages without case competition, the internal and external case do not com
 
 Table \ref{tbl:no-case-competition-int} shows the pattern of a language in which the relative pronoun always appears in the internal case. In the second row, the internal case is nominative and the external case is nominative, accusative or dative. The relative pronoun appears in the nominative. It is irrelevant here that the nominative is less complex than the accusative and the dative, because there is no case competition taking place. The third row shows that the relative pronoun always appears in the accusative when the internal case is the accusative, and the fourth row shows the same for the dative. To my knowledge, this type is not attested in any natural language.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Always internal case}
   \begin{tabular}{c|c|c|c}
@@ -1289,7 +1290,7 @@ Table \ref{tbl:no-case-competition-int} shows the pattern of a language in which
 
 Table \ref{tbl:no-case-competition-ext} shows the pattern of a language in which the relative pronoun always appears in the external case. In the second column, the external case is nominative and the internal case is nominative, accusative or dative. The relative pronoun appears in the nominative. It is irrelevant here that the nominative is less complex than the accusative and the dative, because there is no case competition taking place. The third column shows that the relative pronoun always appears in the accusative when the external case is the accusative, and the fourth column shows the same for the dative.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Always external case}
   \begin{tabular}{c|c|c|c}
@@ -1325,7 +1326,7 @@ Section \ref{sec:always-ext} discusses two languages that let their relative pro
 
 In this section I discuss two languages in which the relative pronoun always appears in the external case. I show that these languages do not show any case competition. In other words, these languages are of the type shown in Table \ref{tbl:no-case-competition-ext} and not of the type I discussed in Section \ref{sec:pattern-iii} (or of the one in Section \ref{sec:pattern-i}).
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Always external case (repeated)}
   \begin{tabular}{c|c|c|c}
@@ -1370,7 +1371,7 @@ The relative pronoun \tit{ðam} `\ac{rel}.\ac{dat}.\ac{pl}' appears in the exter
 
 This example is compatible with three patterns. First, Old English could be a case competition language that only allows the external case to surface. I repeat Table \ref{tbl:case-competition-only-ext-repeated} from Section \ref{sec:pattern-iii} as Table \ref{tbl:oe-poss1}, and I mark the cell that corresponds to example \ref{ex:oe-dat-nom} in gray.
 
- \begin{table}[H]
+ \begin{table}[ht]
    \center
    \caption{Old English headless relatives possibility 1}
    \begin{tabular}{c|c|c|c}
@@ -1402,7 +1403,7 @@ This example is compatible with three patterns. First, Old English could be a ca
 
 Second, Old English could be a case competition language that allows the internal case and the external case to surface. I repeat Table \ref{tbl:case-competition-int-ext-repeated} from Section \ref{sec:pattern-i} as Table \ref{tbl:oe-poss2}, and I mark the cell that corresponds to example \ref{ex:oe-dat-nom} in gray.
 
-  \begin{table}[H]
+  \begin{table}[ht]
     \center
     \caption{Old English headless relatives possibility 2}
     \begin{tabular}{c|c|c|c}
@@ -1434,7 +1435,7 @@ Second, Old English could be a case competition language that allows the interna
 
 Third, Old English could be a language without case competition that lets the relative pronoun appear in the external case. I repeat Table \ref{tbl:no-case-competition-ext-repeated} from the beginning of this section as Table \ref{tbl:oe-poss3}, and I mark the cell that corresponds to example \ref{ex:oe-dat-nom} in gray.
 
- \begin{table}[H]
+ \begin{table}[ht]
    \center
    \caption{Old English headless relatives possibility 3}
    \begin{tabular}{c|c|c|c}
@@ -1483,7 +1484,7 @@ The relative pronoun appears in the external case, although it is the least comp
 This example shows that Old English is neither an instance of the pattern in Section \ref{sec:pattern-iii}, in which only the external case is allowed to surface, nor is it an instance of the pattern in Section \ref{sec:pattern-i}, in which the internal case and external case are allowed to surface.
 Instead, as illustrated by Table \ref{tbl:no-case-competition-old-english}, the language does not have any case competition. The relative pronoun appears in the external case: the external case can be the most complex case, illustrated by the example in \ref{ex:oe-dat-nom}, marked here in light gray, or it can be the least complex case, illustrated by the example in \ref{ex:oe-acc-dat}, marked here in dark gray.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Summary of Old English headless relatives}
   \begin{tabular}{c|c|c|c}
@@ -1528,7 +1529,7 @@ thank.\ac{pst}.3\ac{pl}\scsub{[acc]} \ac{rel}.\ac{pl}.\ac{m}.\ac{acc} \ac{cl}.1\
 
 This example is compatible with three patterns. First, Modern Greek could be a case competition language that only allows the external case to surface. I repeat Table \ref{tbl:case-competition-only-ext-repeated} from Section \ref{sec:pattern-iii} as Table \ref{tbl:greek-poss1}, and I mark the cell that corresponds to example \ref{ex:greek-acc-nom} in gray.
 
- \begin{table}[H]
+ \begin{table}[ht]
    \center
    \caption{Modern Greek headless relatives possibility 1}
    \begin{tabular}{c|c|c|c}
@@ -1560,7 +1561,7 @@ This example is compatible with three patterns. First, Modern Greek could be a c
 
 Second, Modern Greek could be a case competition language that allows the internal case and external case to surface. I repeat Table \ref{tbl:case-competition-int-ext-repeated} from Section \ref{sec:pattern-i} as Table \ref{tbl:greek-poss2}, and I mark the cell that corresponds to example \ref{ex:greek-acc-nom} in gray.
 
-  \begin{table}[H]
+  \begin{table}[ht]
     \center
     \caption{Modern Greek headless relatives possibility 2}
     \begin{tabular}{c|c|c|c}
@@ -1592,7 +1593,7 @@ Second, Modern Greek could be a case competition language that allows the intern
 
 Third, Modern Greek could be a language without case competition that lets the relative pronoun appear in the external case. I repeat Table \ref{tbl:no-case-competition-ext-repeated} from the beginning of this section as Table \ref{tbl:greek-poss3}, and I mark the cell that corresponds to example \ref{ex:greek-acc-nom} in gray.
 
- \begin{table}[H]
+ \begin{table}[ht]
    \center
    \caption{Modern Greek headless relatives possibility 3}
    \begin{tabular}{c|c|c|c}
@@ -1647,7 +1648,7 @@ come.\ac{pst}.3\ac{pl}\scsub{[nom]} \ac{rel}.\ac{pl}.\ac{m}.\ac{acc} invite.\ac{
 This example shows that Modern Greek is neither an instance of the pattern in Section \ref{sec:pattern-iii}, in which only the external case is allowed to surface, nor is it an instance of the pattern in Section \ref{sec:pattern-i}, in which the internal case and external case are allowed to surface.
 Instead, as illustrated by Table \ref{tbl:no-case-competition-greek}, the language does not have any case competition. The relative pronoun appears in the external case: the external case can be the most complex case, illustrated by the example in \ref{ex:greek-acc-nom}, marked here in light gray, or it can be the least complex case, illustrated by the example in \ref{ex:greek-nom-acc}, marked here in dark gray.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Summary of Modern Greek headless relatives}
   \begin{tabular}{c|c|c|c}
@@ -1719,7 +1720,7 @@ This section provides a typological overview of headless relatives. First, I des
 In Section \ref{sec:pattern-i} to \ref{sec:pattern-iv}, I discussed four different patterns. These four patterns are all based on a single table, shown in Table \ref{tbl:case-competition-int-ext-typology} (repeated from Section \ref{sec:pattern-i}). The cases in the cells are the ones that win the case competition.
 The variation between the four patterns lies in whether all cells in the table are grammatical, or whether some of them are not. In none of the four patterns in Section \ref{sec:pattern-i} to \ref{sec:pattern-iv}, the cells are filled by a case different from what is given in \ref{tbl:case-competition-int-ext-typology}.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Relative pronoun follows case competition}
   \begin{tabular}{c|c|c|c}
@@ -1751,7 +1752,7 @@ The variation between the four patterns lies in whether all cells in the table a
 
 In this section I introduced two different ways of filling out the table. The first one is the one in which the relative pronoun appears in the internal case, as in Table \ref{tbl:no-case-competition-int-typology} (repeated from Table \ref{tbl:no-case-competition-ext}).
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Relative pronoun in internal case}
   \begin{tabular}{c|c|c|c}
@@ -1783,7 +1784,7 @@ In this section I introduced two different ways of filling out the table. The fi
 
 The second one is the one in which the relative pronoun appears in the external case, as in Table \ref{tbl:no-case-competition-ext-typology} (repeated from Table \ref{tbl:no-case-competition-ext}).
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Relative pronoun in external case}
   \begin{tabular}{c|c|c|c}
@@ -1821,7 +1822,7 @@ In this dissertation I do not offer an explanation for why this type of example 
 }
 If the language lets its relative pronouns appear in the external case, the pattern shown in Table \ref{tbl:no-case-competition-ext-typology} is generated. Old English and Modern Greek are two examples of languages that let their relative pronouns appear in the external case.
 
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
     \begin{tikzpicture}[node distance=1.5cm]
       \footnotesize{
@@ -1864,7 +1865,7 @@ In Table \ref{tbl:possible-headless-relatives}, I give all logically possible pa
 
 When the internal case and the external case differ (which holds for both options the top row indicates), the relative pronoun cannot appear in both the internal and external case at the same time. This excluded the possibility of having a checkmark at both \ac{int} and \ac{ext} in the same situation. This leaves the possibility to have a checkmark at \ac{int}, at \ac{ext} or at none of them. This gives 3 × 3 = 9 logically possible options, which are listen in Table \ref{tbl:possible-headless-relatives}.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Possible patterns for headless relatives}
     \begin{tabular}{ccc|ccc}
