--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -20,7 +20,7 @@ This chapter is structured as follows. First, I introduce a specific case decomp
 \citet{caha2009,caha2013} (followed by \citealt[cf.][]{starke2009,bobaljik2012,mcfadden2018,smith2019,vanbaal2018}) has extensively argued that case should be decomposed into privative features. Specifically, the decomposition is cumulative: each case has a different number of case features, and the number grows one by one.
 This is illustrated in Table \ref{tbl:case-decomposed}. Accusative has all the features that nominative has (here \ac{f}1) plus one extra (here \ac{f}2). Dative has all the features accusative has (\ac{f}1 and \ac{f}2) plus one extra (\ac{f}3).
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
 	\caption {Case decomposed}
 		\begin{tabular}{ll}
@@ -50,7 +50,7 @@ The decomposition in Table \ref{tbl:case-decomposed} forms the basis to derive t
 Case syncretism follows the ordering of the case scale \ac{nom} < \ac{acc} < \ac{dat}. Along this scale, only contiguous regions in the sequence are syncretic. In this section I show how case syncretism patterns can be derived from the case decomposition in Table \ref{tbl:case-decomposed}.
 In Table \ref{tbl:syncretisms-derive} I repeat from Table \ref{tbl:syncretisms} examples that shows the possible and impossible syncretism patterns.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption {Syncretism patterns (repeated)}
     \input{tables/syncretism-nom-acc-dat.tex}
@@ -973,7 +973,7 @@ In sum, the cumulative case decomposition from Table \ref{tbl:case-decomposed} c
 
 Some languages morphologically reflect the case scale \ac{nom} < \ac{acc} < \ac{dat}. Khanty is an example of such a language. The phonological form of the accusative literally contains the phonological form of the nominative, and the form of the dative contains the form of the accusative. In this section I show how morphological case containment can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example from Khanty that shows morphological case containment in Table \ref{tbl:cont-khanty-3sg} \pgcitep{nikolaeva1999}{16}.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption {Morphological case containment of 3\ac{sg} in Khanty}
     \input{tables/containment-nom-acc-dat.tex}
@@ -1219,7 +1219,7 @@ In headless relatives, the internal case and the external case compete to surfac
 
 I repeat the summary of the data pattern for Gothic in Table \ref{tbl:summary-gothic-deriving}. I gave the cells different shadings depending on which cases compete. The dark gray cells are the ones in which dative and the accusative compete, and the dative wins. The light gray cells are the ones in which the dative and the nominative compete, and the dative again wins. The uncolored cells are the ones in which the accusative and the nominative compete, and the accusative wins.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption {Summary of Gothic headless relative (repeated)}
   \begin{tabular}{c|c|c|c}
