--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -690,3 +690,12 @@
   year={2003},
   publisher={Routledge}
 }
+
+@article{s̆imík2020,
+  title={Free Relatives},
+  author={S̆imík, Radek},
+  journal={The Wiley Blackwell Companion to Semantics},
+  pages={1--38},
+  year={2020},
+  publisher={Wiley Online Library}
+}
