--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -1,4 +1,4 @@
-competes ains]% !TEX root = thesis.tex
+% !TEX root = thesis.tex
 
 \chapter{A recurring pattern}\label{ch:recurring}
 
@@ -49,7 +49,7 @@ The relative pronoun \tit{þaim)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{dat}' appears in 
 
 These findings can be summarized as in Table \ref{tbl:summary-gothic-matching}. The left column shows the internal case (\ac{int}) between square brackets. The upper row shows the external case (\ac{ext}) between square brackets. The other cells indicate the case of the relative pronoun. The top-left to bottom-right diagonal corresponds to the examples I have given so far in which the internal and external case match. The nominative marked in light gray corresponds to \ref{ex:gothic-nom-nom}, in which the internal nominative case competes ains] the external nominative case, and the relative pronoun surfaces in the nominative case. The accusative marked in dark gray corresponds to \ref{ex:gothic-acc-acc}, in which the internal accusative case competes against the external accusative case, and the relative pronoun surfaces in the accusative case. The unmarked dative corresponds to \ref{ex:gothic-dat-dat}, in which the internal dative case competes against the external dative case, and the relative pronoun surfaces in the dative case.
 
-\begin{table}[H]
+\begin{table}[ht]
  \center
  \caption{Gothic headless relatives (matching)}
  \begin{tabular}{c|c|c|c}
@@ -116,7 +116,7 @@ Throughout this dissertation * stands for 'not found in natural language'. For e
 
 The light gray marking corresponds to \ref{ex:gothic-nom-acc-rep}, in which the internal accusative wins the case competition over the external nominative, and the relative pronoun surfaces in the accusative case. The dark gray marking corresponds to \ref{ex:gothic-acc-nom-rep}, in which the external accusative wins the case competition over the internal nominative, and the relative pronoun surfaces in the accusative case. The instances of *\ac{nom} that appear in the same cells indicate that there are no examples, in which the nominative and the accusative compete and the relative pronoun appears in the nominative case.
 
-\begin{table}[H]
+\begin{table}[ht]
  \center
  \caption{Gothic headless relatives (\ac{nom} --- \ac{acc})}
  \begin{tabular}{c|c|c|c}
@@ -170,7 +170,7 @@ Examples in which the internal case is nominative, the external case is dative a
 
 The two examples in which the nominative and the dative compete are showed in Table \ref{tbl:summary-gothic-nom-dat}. The light gray marking corresponds to \ref{ex:gothic-nom-dat}, in which the internal dative wins the case competition over the external nominative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-dat-nom}, in which the external dative wins the case competition over the internal nominative, and the relative pronoun surfaces in the dative case. The instances of *\ac{nom} that appear in the same cells indicate that there are no examples, in which the nominative and the dative compete and the relative pronoun appears in the nominative case.
 
- \begin{table}[H]
+ \begin{table}[ht]
   \center
   \caption{Gothic headless relatives (\ac{nom} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
@@ -231,7 +231,7 @@ that believe.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]} \ac{rel}.\ac{sg}.\ac{m}.\a
 
 The two examples in which the accusative and the dative compete are showed in Table \ref{tbl:summary-gothic-acc-dat}. The light gray marking corresponds to \ref{ex:gothic-acc-dat}, in which the internal dative wins the case competition over the external accusative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-dat-acc}, in which the external dative wins the case competition over the internal accusative, and the relative pronoun surfaces in the dative case. The instances of *\ac{acc} that appear in the same cells indicate that there are no examples, in which the accusative and the dative compete and the relative pronoun appears in the accusative case.
 
- \begin{table}[H]
+ \begin{table}[ht]
   \center
   \caption{Gothic headless relatives (\ac{acc} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
@@ -266,7 +266,7 @@ The unmarked three cells in the diagonal are situations in which the internal an
 The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. In these situations, the relative pronoun appears in the internal case. They correspond to the examples \ref{ex:gothic-nom-acc-rep}, \ref{ex:gothic-nom-dat} and \ref{ex:gothic-acc-dat}.
 The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition. In these situations, the relative pronoun appears in the external case. They correspond to the examples in \ref{ex:gothic-acc-nom-rep}, \ref{ex:gothic-dat-nom} and \ref{ex:gothic-dat-acc}.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption{Summary of Gothic headless relatives}
     \input{tables/gothic-summary.tex}
@@ -300,7 +300,7 @@ It differs per language with how many of its arguments a predicate agrees. Howev
 }
 The hierarchy is schematically represented in Figure \ref{fig:agr-sub-do-io}. It should be read as follows: if a language allows the predicate to agree with the argument in a particular circle, it also allows the predicate to agree with the argument in the circle around it.
 
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
@@ -345,7 +345,7 @@ Basque is an example of a language that shows agreement with the subject, the di
 
 Putting the languages in \posscitet{moravcsik1978} schema gives the result as shown in Figure \ref{fig:agr-sub-do-io-lang}.
 
- \begin{figure}[H]
+ \begin{figure}[ht]
    \centering
    \begin{tikzpicture}
      \draw (0,1) circle (2.25);
@@ -367,7 +367,7 @@ Putting the languages in \posscitet{moravcsik1978} schema gives the result as sh
 
 \citet{gilligan1987} performed a typological study among 100 genetically and areally diverse languages, which confirms the picture. The results are shown in Table \ref{tbl:agr-typo}. There are 23 languages that do not show any agreement, like Japanese. There are 31 languages that show agreement only with the subject and not with the direct and indirect object, like German. There are 25 languages that show agreement with the subject and direct object but not with the indirect object, like Hungarian. There are 23 languages that show agreement with the subject, the direct object and the indirect object, like Basque.
 
- \begin{table}[H]
+ \begin{table}[ht]
    \center
    \caption {Typology for agreement hierarchy}
      \begin{tabular}[t]{ccccc}
@@ -408,7 +408,7 @@ In {the winter} were.\ac{pl} {the king}.\ac{sg}.\ac{dat} given slave.\ac{pl}.\ac
 
 The second type of evidence that \citeauthor{bobaljik2006} gives comes from ergative-absolutive languages. Ergative-absolutive languages differ in their alignment from nominative-accusative languages. In nominative-accusative languages, the subject of an intransitive verb (S) has the same marking as the subject of a transitive verb (A), namely nominative. The object of a transitive verb (O) has its own marking, namely accusative. This is schematically shown in \ref{fig:nom-acc-lang}.
 
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tikzpicture}
     \node[] at (0,1) {A};
@@ -423,7 +423,7 @@ The second type of evidence that \citeauthor{bobaljik2006} gives comes from erga
 
 In ergative-absolutive languages, the alignment is different. The subject of an intransitive verb (S) has the same marking as the object of the transitive verb (O), namely absolutive. The subject of the transitive verb (A) has its own marking, namely ergative. This is schematically shown in \ref{fig:erg-abs-lang}.
 
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tikzpicture}
     \node[] at (0,1) {A};
@@ -442,7 +442,7 @@ Note here that nominative-accusative languages use the same case marking for the
 
 \citeauthor{bobaljik2006} (following \citealt{marantz2000}) combines nominative-accusative and ergative-absolutive languages in the following way: accusative and ergative are dependent cases, and nominative or absolutive are unmarked case. Reformulating Figure \ref{fig:agr-sub-do-io-lang} in terms of case instead of grammatical function gives the schema in Figure \ref{fig:agr-def-dep-dat}.
 
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
@@ -470,7 +470,7 @@ Last, Basque is a language that shows agreement with the unmarked, the dependent
 
 In the languages I discuss in this dissertation, I focus on languages that have nominative as unmarked case and accusative as dependent case, so Figure \ref{fig:agr-nom-acc-dat} suffices.
 
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
@@ -503,7 +503,7 @@ In \ref{ex:rel-realati}, it is the object of the clause that is relativized. It 
 }
 The implicational hierarchy is schematically represented in Figure \ref{fig:rel-sub-do-io}. It should be read as follows: if a language allows a particular relativization strategy of the grammatical function in a particular circle, it also allows this relativization strategy of the grammatical function of the circle around it. The languages in the figure give examples of the circles they are in.
 
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
@@ -622,7 +622,7 @@ In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' f
  man-\ac{def}-\ac{erg} book-\ac{def}.\ac{abs} give has-\ac{rel} woman-\ac{def}\\
  `the woman that the man has given the book to' \flushfill{Basque, \pgcitealt{keenan1977}{72}, my boldfacing}\label{ex:basque-io}
 
- \begin{figure}[H]
+ \begin{figure}[ht]
    \centering
    \begin{tikzpicture}
      \draw (0,1) circle (2.25);
@@ -671,7 +671,7 @@ Ergatives (for instance the ergative subject \tit{ŋad̦a} `I' in \ref{ex:dyirba
 
 In conclusion, just like the agreement hierarchy, the relativization hierarchy is formalized best in terms of morphological case \citep[cf.][]{caha2009}. Reformulating Figure \ref{fig:agr-sub-do-io-lang} in terms of case instead of grammatical function gives the schema in Figure \ref{fig:agr-nom-acc-dat}.
 
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
@@ -698,7 +698,7 @@ Last, Basque is a language that has a particular relativization strategy for unm
 
 In the languages I discuss in this dissertation, I focus on languages that have nominative as unmarked case and accusative as dependent case, so Figure \ref{fig:rel-nom-acc-dat} suffices.
 
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
@@ -739,7 +739,7 @@ I give an example of a syncretism between accusative and dative but not nominati
 I give an example of a syncretism between nominative and accusative but not dative from German. The third person singular feminine \tit{sie} `she/her' is syncretic between nominative and accusative. The dative has a separate form: \tit{ihr} `her'.
 Crucially, to the best of my knowledge, there is no language in which the nominative and the dative are syncretic but the accusative is not.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption {Syncretism patterns}
     \input{tables/syncretism-nom-acc-dat.tex}
@@ -759,7 +759,7 @@ The nominative form for the first person singular is \tit{ma} `I'. The form for 
 
 The third person singular and first person plural show the same pattern. The accusative forms \tit{luwe:l} `him/her' and \tit{muŋe:w} `us' contain the nominative forms \tit{luw} and the \tit{muŋ} plus the accusative marker \tit{-e:l} or \tit{-e:w}. The dative forms \tit{luwe:lna} `him/her' and \tit{muŋe:wna} `us' contain the accusative forms \tit{luwe:l} and \tit{muŋe:w} plus the dative marker \tit{-na}. Again, the dative formally contains the accusative, which in turn contains the nominative.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption {Morphological case containment in Khanty}
   \begin{tabular}{clll}
