--- a/thesis.tex
+++ b/thesis.tex
@@ -73,11 +73,11 @@ thanks
 
 % \include{introduction}
 %
-% \part{The case}\label{part:case-facts}
+\part{The case}\label{part:case-facts}
 % \include{recurring-pattern}
 % \include{case-decomposition}
 
-% \part{The base}\label{part:variation}
+\part{The base}\label{part:variation}
 % \include{case-competition-typology}
 \include{committee}
 
